syntax = "proto3";

option csharp_namespace = "UserService.Infrastructure.Grpc";

package user;

service UserGrpc {
  rpc GetUserById (GetUserByIdRequest) returns (UserResponse);
  rpc GetUserByEmail (GetUserByEmailRequest) returns (UserResponse);
  rpc ValidateUser (ValidateUserRequest) returns (ValidateUserResponse);
}

message GetUserByIdRequest {
  string user_id = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message UserResponse {
  bool found = 1;
  string user_id = 2;
  string email = 3;
  string full_name = 4;
  bool is_active = 5;
}

message ValidateUserRequest {
  string user_id = 1;
}

message ValidateUserResponse {
  bool is_valid = 1;
  bool is_active = 2;
  string message = 3;
}
